# uav_gazebo

./: .gitignore  GPS_README.md  README.md  index.md
_includes/: head.html
assets/js/: mathjax-config.js
uav_gazebo/: CMakeLists.txt  package.xml
uav_gazebo/cfg/: JoyController.cfg  PurePursuitController.cfg
uav_gazebo/config/: rosconsole.config  ruckig_params.yaml
uav_gazebo/launch/: bringup.launch  display.launch  spawn.launch  testRuckig.launch  testRucking.launch
uav_gazebo/missions/: path.json  path_lifted.json
uav_gazebo/rviz/: ruckig.rviz  rviz.rviz
uav_gazebo/script/: configure_controllers  cookie_quad_2d.py  example_control  example_ruckig_position.py  joy_controller  optuna_autotune.py  pursuit_controller  rotor_dynamics.py  ruckig_offline_position.py  ruckig_offline_waypoints.py  test_drone_sim.py  test_joy_input.py  waypoint_follower_ruckig
uav_gazebo/script/simv2/: README.md  controller.py  dynamics.py  integrator.py  math_utils.py  params.py  simulate.py  simulate_trajectory.py  state.py
uav_gazebo/src/: example_rucking_position.cpp  uav_gazebo_gps_plugin.cpp  uav_gazebo_plugin.cpp
uav_gazebo/urdf/: drone.xacro  example_ruckig_position.xacro
uav_gazebo_msgs/: package.xml
