<?xml version="1.0"?>
<package format="2">
  <name>uav_gazebo</name>
  <version>0.0.0</version>
  <description>Plugin to simulate and control UAVs in Gazebo</description>

  <maintainer email="dringakn@gmail.com">Dr. -Ing. Ahmad Kamal Nasir</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>uav_gazebo_msgs</depend>
  <depend>roscpp</depend>
  <depend>angles</depend>
  <depend>tf2_ros</depend>
  <depend>ruckig</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>kdl_parser</depend>

  <!-- sudo apt install ros-<DISTRO>-kdl-parser-py -->
  <depend>kdl_parser_py</depend>

</package>
